--- a/params.yaml
+++ b/params.yaml
@@ -2,11 +2,7 @@
 feature_engineering:
   embedding_model: "all-MiniLM-L6-v2"  # Pre-trained sentence transformer model
 
-model_training:
-  model_type: "xgboost"
-  test_size: 0.2  # Train-test split ratio
-  random_seed: 42
-  max_depth: 6
-  learning_rate: 0.1
-  n_estimators: 200
-  eval_metric: "logloss"
+model:
+  type: 'sklearn' #sklearn, xgboost, lightgbm, catboost
+  name: 'Random Forest'
+  ModelWithParam: RandomForestClassifier(n_estimators=400, criterion='gini')
