--- a/params.yaml
+++ b/params.yaml
@@ -5,4 +5,7 @@ feature_engineering:
 model:
   type: 'sklearn' #sklearn, xgboost, lightgbm, catboost
   name: 'Random Forest'
-  ModelWithParam: RandomForestClassifier(n_estimators=400, criterion='gini')
+  class: 'RandomForestClassifier'  # Explicit class name
+  params:  # Parameters as a dictionary
+    n_estimators: 400
+    criterion: 'gini'
