--- a/params.yaml
+++ b/params.yaml
@@ -3,10 +3,10 @@ feature_engineering:
   embedding_model: "all-MiniLM-L6-v2"  # Pre-trained sentence transformer model
 
 model:
-  type: 'sklearn' #sklearn, xgboost, lightgbm, catboost
-  name: 'Logistic Regression'
+  type: 'xgboost' #sklearn, xgboost, lightgbm, catboost
+  name: 'xgboost'
   class: 'XGBClassifier'  # Explicit class name
   params:  # Parameters as a dictionary
     eval_metric: "logloss"
-    n_estimators: 200
-    max_depth: 10
+    n_estimators: 400
+    max_depth: 8
